syntax = "proto3";
option java_multiple_files = true;
package com.neu.grpc;

service DownloadService {
  rpc download(DownloadRequest) returns (stream DownloadResponse);
  rpc read(ReadFileRequest) returns (stream ReadFileResponse);
  rpc delete(DeleteResourceRequest) returns (DeleteResourceResponse);
}

// use for initial download or cache
message DownloadRequest {
  string uuid = 1;
}

message DownloadResponse {
  bytes file = 1;
  string filePath = 2;
}

// use for already downloaded file
message ReadFileRequest {
  string filePath = 1;
  uint64 start = 2;
  uint64 end = 3;
}

message ReadFileResponse {
  bytes file = 1;
}

message DeleteResourceRequest {
  string uuid = 1;
}

message DeleteResourceResponse {}